src/main/java/com/example/demo/global/error/exception/AuthenticationException.java
package com.example.demo.global.error.exception;

import com.example.demo.global.error.ErrorCode;

public class AuthenticationException extends BusinessException{

    public AuthenticationException(ErrorCode errorcode){
        super(errorcode);
    }

}
